# videosdk-wiki

./: .gitignore  README.md  requirements.txt  videosdk_repos_update.py
videosdk-live/IoTSdk/: CMakeLists.txt  LICENSE  README.md  idf_component.yml
videosdk-live/IoTSdk/include/: videosdk.h
videosdk-live/NAMO-Turn-Detector-v1/: README.md  RESEARCH.md  inference.py  requirements.txt
videosdk-live/agents-quickstart/IoT-quickstart/main/: CMakeLists.txt  Kconfig.projbuild  ai-demo.c  idf_component.yml
videosdk-live/agents/videosdk-agents/: README.md  pyproject.toml
videosdk-live/agents/videosdk-agents/videosdk/agents/: __init__.py  agent.py  agent_session.py  background_audio.py  cascading_pipeline.py  cli.py  console_mode.py  conversation_flow.py  denoise.py  eou.py  event_bus.py  event_emitter.py  images.py  init_config.py  job.py  pipeline.py  realtime_base_model.py  realtime_pipeline.py  utils.py  vad.py  worker.py
videosdk-live/agents/videosdk-agents/videosdk/agents/a2a/: card.py  protocol.py
videosdk-live/agents/videosdk-agents/videosdk/agents/backend/: __init__.py  connection.py  protocol.py
videosdk-live/agents/videosdk-agents/videosdk/agents/debug/: __init__.py  http_server.py  tracing.py
videosdk-live/agents/videosdk-agents/videosdk/agents/execution/: __init__.py  base_resource.py  inference_resource.py  resource_manager.py  resources.py  task_executor.py  types.py
videosdk-live/agents/videosdk-agents/videosdk/agents/llm/: __init__.py  chat_context.py  llm.py
videosdk-live/agents/videosdk-agents/videosdk/agents/mcp/: mcp_manager.py  mcp_server.py
videosdk-live/agents/videosdk-agents/videosdk/agents/metrics/: __init__.py  analytics.py  cascading_metrics_collector.py  integration.py  logs.py  models.py  realtime_metrics_collector.py  telemetry.py  traces_flow.py
videosdk-live/agents/videosdk-agents/videosdk/agents/room/: audio_stream.py  meeting_event_handler.py  participant_event_handler.py  room.py
videosdk-live/agents/videosdk-agents/videosdk/agents/stt/: __init__.py  stt.py
videosdk-live/agents/videosdk-agents/videosdk/agents/tts/: __init__.py  tts.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-anthropic/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-anthropic/videosdk/plugins/anthropic/: __init__.py  llm.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-aws/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-aws/videosdk/plugins/aws/: __init__.py  aws_nova_sonic_api.py  tts.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-azure/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-azure/videosdk/plugins/azure/: __init__.py  stt.py  tts.py  voice_live.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-cartesia/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-cartesia/videosdk/plugins/cartesia/: __init__.py  stt.py  tts.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-cerebras/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-cerebras/videosdk/plugins/cerebras/: __init__.py  llm.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-deepgram/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-deepgram/videosdk/plugins/deepgram/: __init__.py  stt.py  tts.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-google/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-google/videosdk/plugins/google/: __init__.py  live_api.py  llm.py  stt.py  tts.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-groq/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-groq/videosdk/plugins/groq/: __init__.py  tts.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-humeai/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-humeai/videosdk/plugins/humeai/: __init__.py  tts.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-inworldai/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-inworldai/videosdk/plugins/inworldai/: __init__.py  tts.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-lmnt/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-lmnt/videosdk/plugins/lmnt/: __init__.py  tts.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-navana/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-navana/videosdk/plugins/navana/: __init__.py  stt.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-neuphonic/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-neuphonic/videosdk/plugins/neuphonic/: __init__.py  tts.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-papla/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-papla/videosdk/plugins/papla/: __init__.py  tts.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-rime/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-rime/videosdk/plugins/rime/: __init__.py  tts.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-sarvamai/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-sarvamai/videosdk/plugins/sarvamai/: __init__.py  llm.py  stt.py  tts.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-silero/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-silero/videosdk/plugins/silero/: __init__.py  onnx_runtime.py  vad.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-simli/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-simli/videosdk/plugins/simli/: __init__.py  simli.py
videosdk-live/agents/videosdk-plugins/videosdk-plugins-speechify/: README.md  pyproject.toml
videosdk-live/agents/videosdk-plugins/videosdk-plugins-turn-detector/: README.md  pyproject.toml
(+610 files in other folders)
