[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videosdk-agents"
dynamic = ["version"]
description = "Video SDK Agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "videosdk" }]
keywords = ["video", "audio", "ai", "agents", "videosdk", "webrtc", "realtime"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "uvicorn",
    "videosdk>=0.2.5",
    "numpy",
    "httpx",
    "aiohttp",
    "openai",
    "av>=14.0.0,<15.0.0",
    "python-dotenv",
    "pyee>=13.0.0",
    "grpcio",
    "protobuf",
    "docstring_parser",
    "google-genai",
    "pydantic>=2.0,<3",
    "requests>=2.25.0",
    "rich>=10.0.0",
    "click>=8.0.0",
    "scipy>=1.11.0",
    "mcp",
    "PyYAML",
    "urllib3",
    "opentelemetry-sdk>=1.34.1",
    "opentelemetry-exporter-otlp-proto-http>=1.34.1",
    "requests",
    "protobuf>=5.29,<6.0",
    "aec-audio-processing>=1.0.1",
    "sounddevice",
]


[project.scripts]
videosdk = "videosdk.agents.cli:main"

[project.optional-dependencies]
anthropic = ["videosdk-plugins-anthropic>=0.0.38"]
assemblyai = ["videosdk-plugins-assemblyai>=0.0.38"]
aws = ["videosdk-plugins-aws>=0.0.38"]
azure = ["videosdk-plugins-azure>=0.0.38"]
cartesia = ["videosdk-plugins-cartesia>=0.0.38"]
cerebras = ["videosdk-plugins-cerebras>=0.0.38"]
deepgram = ["videosdk-plugins-deepgram>=0.0.38"]
elevenlabs = ["videosdk-plugins-elevenlabs>=0.0.38"]
google = ["videosdk-plugins-google>=0.0.38"]
groq = ["videosdk-plugins-groq>=0.0.38"]
humeai = ["videosdk-plugins-humeai>=0.0.38"]
inworldai = ["videosdk-plugins-inworldai>=0.0.38"]
lmnt = ["videosdk-plugins-lmnt>=0.0.38"]
navana = ["videosdk-plugins-navana>=0.0.38"]
neuphonic = ["videosdk-plugins-neuphonic>=0.0.38"]
openai = ["videosdk-plugins-openai>=0.0.38"]
papla = ["videosdk-plugins-papla>=0.0.38"]
resemble = ["videosdk-plugins-resemble>=0.0.38"]
rime = ["videosdk-plugins-rime>=0.0.38"]
rnnoise = ["videosdk-plugins-rnnoise>=0.0.38"]
sarvamai = ["videosdk-plugins-sarvamai>=0.0.38"]
silero = ["videosdk-plugins-silero>=0.0.38"]
simli = ["videosdk-plugins-simli>=0.0.38"]
smallestai = ["videosdk-plugins-smallestai>=0.0.38"]
speechify = ["videosdk-plugins-speechify>=0.0.38"]
turn-detector = ["videosdk-plugins-turn-detector>=0.0.38"]

[tool.hatch.version]
path = "videosdk/agents/version.py"

[tool.hatch.build.targets.wheel]
packages = ["videosdk"]
include = ["videosdk/agents/resources/*"]

[tool.hatch.build.targets.sdist]
include = ["/videosdk"]

[tool.hatch.metadata]
allow-direct-references = true
