[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videosdk-plugins-google"
dynamic = ["version"]
description = "VideoSDK Agent Framework plugin for google services"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "videosdk" }]
keywords = ["video", "audio", "ai", "google", "videosdk"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "videosdk-agents>=0.0.38",
    "google-genai >= 1.14.0",
    "google-cloud-texttospeech >= 2.24, < 3",
    "google-cloud-speech >= 2, < 3",
    "scipy",
    "protobuf>=5.29,<6.0",
]

[tool.hatch.version]
path = "videosdk/plugins/google/version.py"

[tool.hatch.build.targets.wheel]
packages = ["videosdk"]

[tool.hatch.build.targets.sdist]
include = ["/videosdk"]
