[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "videosdk-plugins-simli"
dynamic = ["version"]
description = "VideoSDK Agent Framework plugin for Simli Virtual Avatar"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "videosdk" }]
keywords = ["video", "audio", "ai", "simli", "videosdk", "simli"]
classifiers = [
    "Intended Audience :: Developers",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Communications :: Conferencing",
    "Topic :: Multimedia :: Sound/Audio",
    "Topic :: Multimedia :: Video",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "videosdk-agents>=0.0.38",
    "simli-ai>=0.1.17",
]

[tool.hatch.version]
path = "videosdk/plugins/simli/version.py"

[tool.hatch.build.targets.wheel]
packages = ["videosdk"]

[tool.hatch.build.targets.sdist]
include = ["/videosdk"]
